Whitespace fix

--- a/src/scss/media.scss
+++ b/src/scss/media.scss
@@ -1,3 +1,4 @@
 img {
 	width: 100%;
+	vertical-align: middle;
 }
